Refactor Task and TaskAttachment entities: replace @Data with @Getter and @Setter, update equals/hashCode and toString methods, and remove unused methods. Update application configuration files to remove PostgreSQL dialect setting.